--- a/src/components/basics/Footerx.css
+++ b/src/components/basics/Footerx.css
@@ -176,6 +176,7 @@
 		width: 100%;
 		margin-bottom: 40px;
 		text-align: center;
+        text-align: justify;
 	}
 
 	.footer-distributed .footer-center i{
