--- a/src/components/basics/style.css
+++ b/src/components/basics/style.css
@@ -159,14 +159,14 @@
       grid-gap: 10px;
       justify-content: space-around;
     }
-    .btn-group__item:last-child {
-        border-top-right-radius: 0rem !important;
-        border-bottom-right-radius: 0rem !important;
+    /* .btn-group__item:last-child {
+        border-top-right-radius: 0.5rem !important;
+        border-bottom-right-radius: 0.5rem !important;
       }
       .btn-group__item:first-child {
-        border-top-left-radius: 0rem !important;
-        border-bottom-left-radius: 0rem !important;
-      }
+        border-top-left-radius: 0.5rem !important;
+        border-bottom-left-radius: 0.5rem !important;
+      } */
       .card-container img {
         max-width: 300px;
         height: 210px;
